# AmazinglyAdvanced

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: gba.cpp  gba.h
src/cpu/: cpu.cpp  cpu.h  cpu_modes.h  cpu_registers.h
src/lcd/: lcd.cpp  lcd.h  lcd_registers.h
src/mmu/: mmu.cpp  mmu.h
src/mmu/cartridge/: cartridge.cpp  cartridge.h
src/mmu/dma/: dma.cpp  dma.h  dma_channels.h
src/timer/: timer.cpp  timer.h  timer_registers.h
src/utils/: file_utils.h  log.h
